Able to compile, not working yet

--- a/XPuttyMan/MainWindow.xaml
+++ b/XPuttyMan/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="XPuttyMan.MainWindow"
+﻿<Window x:Class="EasyPutty.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:bltoolswpfctrl="clr-namespace:BLTools.WPF.Controls;assembly=BLTools.WPF.Controls.45"
-        xmlns:local="clr-namespace:XPuttyMan"
-        xmlns:localViews="clr-namespace:XPuttyMan.Views"
+        xmlns:localViewModels="clr-namespace:EasyPutty.ViewModels"
+        xmlns:localViews="clr-namespace:EasyPutty.Views"
         mc:Ignorable="d"
         Title="{Binding Path=ApplicationTitle}"
         Height="800"
@@ -13,10 +13,6 @@
         MinWidth="725"
         d:DataContext="{Binding Source=FakeMainViewModel}">
 
-  <Window.Resources>
-    <local:MainViewModel x:Key="FakeMainWiewModel" />
-  </Window.Resources>
-  
   <Grid>
     <Grid.RowDefinitions>
       <RowDefinition Height="Auto" />
@@ -124,7 +120,7 @@
 
     </Menu>
 
-    <Grid d:DataContext="{Binding Source={x:Static local:MainViewModel.DesignMainViewModel}}"
+    <Grid d:DataContext="{Binding Source={x:Static localViewModels:MainViewModel.DesignMainViewModel}}"
           Grid.Row="1">
       <Grid.RowDefinitions>
         <RowDefinition Height="Auto" />
