--- a/XPuttyMan/Views/WindowEditRemoteCommand.xaml
+++ b/XPuttyMan/Views/WindowEditRemoteCommand.xaml
@@ -1,10 +1,11 @@
-﻿<Window x:Class="XPuttyMan.Views.WindowEditRemoteCommand"
+﻿<Window x:Class="EasyPutty.Views.WindowEditRemoteCommand"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:localViews="clr-namespace:XPuttyMan.Views"
-        xmlns:localViewModels="clr-namespace:XPuttyMan"
+        xmlns:localViews="clr-namespace:EasyPutty.Views"
+        xmlns:localViewModels="clr-namespace:EasyPutty.ViewModels"
+        xmlns:libxputty="clr-namespace:libxputty_std20;assembly=libxputty-std20"
         mc:Ignorable="d"
         Title="{Binding Path=CleanName, StringFormat='Edit [{0}] remote command'}"
         Height="450"
