--- a/XPuttyMan/App.xaml
+++ b/XPuttyMan/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="XPuttyMan.App"
+﻿<Application x:Class="EasyPutty.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:XPuttyMan"
+             xmlns:local="clr-namespace:EasyPutty"
              StartupUri="MainWindow.xaml"
              Exit="Application_Exit"
              Startup="Application_Startup">
