--- a/XPuttyMan/Views/ViewSessionsList.xaml
+++ b/XPuttyMan/Views/ViewSessionsList.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="XPuttyMan.Views.ViewSessionsList"
+﻿<UserControl x:Class="EasyPutty.Views.ViewSessionsList"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:localViewModels="clr-namespace:XPuttyMan"
-             xmlns:localViews="clr-namespace:XPuttyMan.Views"
+             xmlns:localViewModels="clr-namespace:EasyPutty"
+             xmlns:localViews="clr-namespace:EasyPutty.Views"
              mc:Ignorable="d">
 
 
