--- a/XPuttyMan/Views/ViewOneSession.xaml
+++ b/XPuttyMan/Views/ViewOneSession.xaml
@@ -6,7 +6,6 @@
              xmlns:localViewModels="clr-namespace:EasyPutty.ViewModels"
              xmlns:localViews="clr-namespace:EasyPutty.Views"
              xmlns:bltoolswpf="clr-namespace:BLTools.WPF;assembly=BLTools.WPF.45"
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800">
@@ -21,7 +20,7 @@
             Margin="2"
             Name="InnerBorder"
             DataContext="{Binding}"
-            d:DataContext="{Binding Source={x:Static localViewModels:VMPuttySession.DesignVMPuttySession}}"
+            d:DataContext="{Binding Source={x:Static localViewModels:TVMPuttySession.DesignVMPuttySession}}"
             SnapsToDevicePixels="True">
 
       <Grid Margin="2">
@@ -115,7 +114,7 @@
                        Margin="10,0,0,0" />
             <TextBlock Text="{Binding Path=HostName}"
                        Width="550"
-                       Margin="20,2,0,5" />
+                       Margin="10,2,0,5" />
 
           </StackPanel>
 
