--- a/XPuttyMan/Views/ViewSessionsList.xaml
+++ b/XPuttyMan/Views/ViewSessionsList.xaml
@@ -5,11 +5,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:localViewModels="clr-namespace:EasyPutty.ViewModels"
              xmlns:localViews="clr-namespace:EasyPutty.Views"
+             xmlns:bltoolswpf="clr-namespace:BLTools.WPF;assembly=BLTools.WPF.45"
              mc:Ignorable="d">
 
 
   <Grid DataContext="{Binding}"
         d:DataContext="{Binding Source={x:Static localViewModels:TVMPuttySessionsList.DesignVMPuttySessionsList}}">
+
+    <Grid.Resources>
+      <bltoolswpf:BoolToVisibilityConverter x:Key="BoolToVisibility" />
+    </Grid.Resources>
 
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="*" />
@@ -20,27 +25,50 @@
               SnapsToDevicePixels="True"
               SelectionMode="Extended"
               ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-              BorderThickness="0"
-              Selector.SelectionChanged="DataTemplate_SelectionChanged">
+              BorderThickness="0">
 
       <ListView.GroupStyle>
         <GroupStyle>
-          <GroupStyle.HeaderTemplate>
-            <DataTemplate>
-              <StackPanel Orientation="Horizontal">
-                <TextBlock FontSize="18"
-                           FontWeight="Bold"
-                           Margin="0,10,0,2"
-                           Text="{Binding Path=Name}" />
-                <TextBlock FontSize="18"
-                           FontWeight="Bold"
-                           Margin="0,10,0,2"
-                           Text="{Binding Path=ItemCount, StringFormat=' ({0})'}" />
-              </StackPanel>
-            </DataTemplate>
-          </GroupStyle.HeaderTemplate>
+          
+          <GroupStyle.ContainerStyle>
+            <Style TargetType="{x:Type GroupItem}">
+              <Setter Property="Template">
+                <Setter.Value>
+                  <ControlTemplate>
+                    <Expander SnapsToDevicePixels="True"
+                              DataContext="{Binding}"
+                              ExpandDirection="Down"
+                              VerticalAlignment="Bottom"
+                              VerticalContentAlignment="Bottom"
+                              HorizontalAlignment="Stretch"
+                              HorizontalContentAlignment="Stretch"
+                              IsExpanded="False"
+                              >
+                      <Expander.Header>
+                        <StackPanel Orientation="Horizontal">
+                          <TextBlock FontSize="18"
+                                     FontWeight="Bold"
+                                     Text="{Binding Path=Name}" />
+                          <TextBlock FontSize="18"
+                                     FontWeight="Bold"
+                                     Text="{Binding Path=ItemCount, StringFormat=' ({0})'}" />
+                        </StackPanel>
+                      </Expander.Header>
+
+                      <Expander.Content>
+                        <ItemsPresenter />
+                      </Expander.Content>
+
+                    </Expander>
+                  </ControlTemplate>
+                </Setter.Value>
+              </Setter>
+            </Style>
+            
+          </GroupStyle.ContainerStyle>
         </GroupStyle>
       </ListView.GroupStyle>
+
 
       <ListView.ItemTemplate>
         <DataTemplate>
