--- a/XPuttyMan/Views/ViewSessionsBySectionsWithExpander.xaml
+++ b/XPuttyMan/Views/ViewSessionsBySectionsWithExpander.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="EasyPutty.Views.ViewSessionsList"
+﻿<UserControl x:Class="EasyPutty.Views.ViewSessionsBySectionsWithExpander"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,7 +10,7 @@
 
 
   <Grid DataContext="{Binding}"
-        d:DataContext="{Binding Source={x:Static localViewModels:TVMPuttySessionsList.DesignVMPuttySessionsList}}">
+        d:DataContext="{Binding Source={x:Static localViewModels:TVMPuttySessionsGroupWithView.DesignVMPuttySessionsGroupWithView}}">
 
     <Grid.Resources>
       <bltoolswpf:BoolToVisibilityConverter x:Key="BoolToVisibility" />
@@ -20,7 +20,8 @@
       <ColumnDefinition Width="*" />
     </Grid.ColumnDefinitions>
 
-    <ListView ItemsSource="{Binding Path=PuttySessions, Mode=OneWay}"
+    <ListView d:DataContext="{Binding Path=PuttySessions}"
+              ItemsSource="{Binding Mode=OneWay}"
               Margin="10"
               SnapsToDevicePixels="True"
               SelectionMode="Extended"
@@ -29,7 +30,7 @@
 
       <ListView.GroupStyle>
         <GroupStyle>
-          
+
           <GroupStyle.ContainerStyle>
             <Style TargetType="{x:Type GroupItem}">
               <Setter Property="Template">
@@ -42,8 +43,7 @@
                               VerticalContentAlignment="Bottom"
                               HorizontalAlignment="Stretch"
                               HorizontalContentAlignment="Stretch"
-                              IsExpanded="False"
-                              >
+                              IsExpanded="True">
                       <Expander.Header>
                         <StackPanel Orientation="Horizontal">
                           <TextBlock FontSize="18"
@@ -64,7 +64,7 @@
                 </Setter.Value>
               </Setter>
             </Style>
-            
+
           </GroupStyle.ContainerStyle>
         </GroupStyle>
       </ListView.GroupStyle>
