--- a/XPuttyMan/Views/ViewOneSession.xaml
+++ b/XPuttyMan/Views/ViewOneSession.xaml
@@ -13,16 +13,15 @@
   <UserControl.Resources>
     <ResourceDictionary Source="Menus.xaml" />
   </UserControl.Resources>
-  
-  <Grid>
+
+  <Grid  DataContext="{Binding}"
+         d:DataContext="{Binding Source={x:Static localViewModels:TVMPuttySession.DesignVMPuttySession}}">
 
     <Border BorderBrush="DarkBlue"
             BorderThickness="1"
             CornerRadius="5"
             Margin="2"
             Name="InnerBorder"
-            DataContext="{Binding}"
-            d:DataContext="{Binding Source={x:Static localViewModels:TVMPuttySession.DesignVMPuttySession}}"
             SnapsToDevicePixels="True">
 
       <Grid Margin="2">
@@ -103,7 +102,7 @@
                         Value="Center" />
               </Style>
             </StackPanel.Resources>
-            <TextBlock Text="{Binding Path=DisplayName}"
+            <TextBlock Text="{Binding Path=Header}"
                        Width="550"
                        FontWeight="Bold"
                        Margin="10,0,0,0" />
@@ -115,6 +114,7 @@
 
         </Grid>
 
+        <!-- Displays the remote command if any -->
         <Border Grid.Row="1"
                 BorderBrush="Green"
                 BorderThickness="1"
