Can read/write data from/to xml source Can execute process with args on command line

--- a/XPuttyMan/Views/Menus.xaml
+++ b/XPuttyMan/Views/Menus.xaml
@@ -32,7 +32,8 @@
             <Image Source="{Binding Path=FileOpenPicture}" />
           </MenuItem.Icon>
         </MenuItem>
-        <MenuItem Header="Open sessions XML data file">
+        <MenuItem Header="Open sessions XML data file"
+                  Command="{Binding Path=CommandFileOpenXml}">
           <MenuItem.Icon>
             <Image Source="{Binding Path=FileOpenPicture}" />
           </MenuItem.Icon>
