--- a/XPuttyMan/Views/ViewGroupLevel1ByTabs.xaml
+++ b/XPuttyMan/Views/ViewGroupLevel1ByTabs.xaml
@@ -43,18 +43,14 @@
 
     <Grid Grid.Column="1"
           DataContext="{Binding Path=SelectedItem}">
-      <StackPanel>
-        <Border Margin="10"
-                BorderThickness="0,0,0,2"
-                BorderBrush="Red">
-          <TextBlock Text="{Binding Path=Header, Mode=OneWay}"
-                     FontSize="18"
-                     FontFamily="Arial"
-                     FontWeight="Bold" 
-                     Margin="0,0,0,5"/>
-        </Border>
-        <localViews:ViewGroupLevel2ByTabs SnapsToDevicePixels="True" />
-      </StackPanel>
+      <Grid.RowDefinitions>
+        <RowDefinition Height="auto" />
+        <RowDefinition Height="*" />
+      </Grid.RowDefinitions>
+      
+
+      <localViews:ViewGroupLevel2ByTabs Grid.Row="1"
+                                        SnapsToDevicePixels="True" />
     </Grid>
 
   </Grid>
